# vk-autoreg

./: .gitignore  README.md  pyproject.toml
app/: app_logger.py  config.py  human.py  main.py  names.json  proxy_grabber.py  sms_activate.py
