[tool.poetry]
name = "vk-autoreg"
version = "0.1.0"
description = ""
authors = ["mazzz3r <mazzz3r@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
requests = "^2.27.1"
vk-api = "^11.9.7"
smsactivateru = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
